# rzem-ai-skillful-claude

./: .gitignore  CLAUDE.md  README.md  VISION.md  build-release-linux.sh  build-release-macos.sh  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
design/: README.md  design-brief.md  fixtures.md  skillful-claude-ui.pen
design/design_prototype/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  dashboard.html  extensions.html  guided-permissions.html  index.html  mcp-map.html  memory-map.html  mq3mzp7c-claude-code-config-studio-structure.md  mq3mzp7d-claude-code-configuration-guide.md  mq3mzp7d-config-studio-fixtures.md  mq3mzp7e-config-studio-design-brief.md  permissions.html  raw-editor.html  scope-stack.html
docs/: fixtures.md  icons.html
e2e/: claude-md-empty-state.spec.ts  fixtures.ts  sidebar.spec.ts  smoke.spec.ts
electron/main/: config.ts  fs.ts  index.ts  ipc.ts  projectContext.ts  skills-cli.ts  updater.ts  watch.ts
electron/preload/: api.d.ts  index.ts
electron/shared/: contract.ts
scripts/: build-icons.mjs  gen-icons-page.mjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  files.rs
src-tauri/src/models/: claude_md.rs  config.rs  mod.rs  skill.rs  workspace.rs
src/components/: Icon.vue  (+7 more)
(+86 files in other folders)
