[package]
name = "skillful-claude"
version = "0.1.0"
description = "Desktop app to manage CLAUDE.md and SKILLS files"
authors = ["rzem"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillful_claude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
gray_matter = "0.2"
pulldown-cmark = "0.12"
keyring = "3"
sha2 = "0.10"
walkdir = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "sync"] }

